<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity"
        >

    <item
            android:id="@+id/action_configure_username"
            android:orderInCategory="100"
            android:title="@string/action_view_configure_username"
            app:showAsAction="never"
            />

    <item
            android:id="@+id/action_view_hatebu"
            android:orderInCategory="100"
            android:title="@string/action_view_hatebu"
            app:showAsAction="never"
            />
    <item
            android:id="@+id/action_view_epitome"
            android:orderInCategory="100"
            android:title="@string/action_view_epitome"
            app:showAsAction="never"
            />
    <item
            android:id="@+id/action_view_about"
            android:orderInCategory="100"
            android:title="@string/action_view_about"
            app:showAsAction="never"
            />
    <item
            android:id="@+id/action_view_setting"
            android:orderInCategory="100"
            android:title="@string/action_view_setting"
            app:showAsAction="never"
            />

</menu>
