<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="4dp"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:paddingTop="4dp"
        >

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    >

                <TextView
                        android:id="@+id/bookmark_count"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginRight="4dp"
                        android:clickable="true"
                        android:gravity="center"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        android:textColor="@color/bookmark_count"
                        tools:text="@string/placeholder_count"
                        />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                    <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                            tools:text="@string/placeholder_title"
                            />

                    <TextView
                            android:id="@+id/original_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:lines="1"
                            android:paddingBottom="4dp"
                            android:textAppearance="@android:style/TextAppearance.Holo.Small"
                            tools:text="@string/placeholder_url"
                            />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                        <TextView
                                android:id="@+id/subject"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAppearance="@android:style/TextAppearance.Holo.Small"
                                tools:text="@string/placeholder_subject"
                                />

                        <TextView
                                android:id="@+id/date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAppearance="@android:style/TextAppearance.Holo.Small"
                                tools:text="@string/placeholder_date"
                                />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dddddd"
                    />

            <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textAppearance="@android:style/TextAppearance.Holo.Small"
                    tools:text="@string/placeholder_description"
                    />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>