<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bookmark_count"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:textColor="@color/bookmark_count"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                    android:text="@string/placeholder_bookmark_count" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        android:text="@string/placeholder_title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/subject"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@android:style/TextAppearance.Holo.Small"
                            android:text="@string/placeholder_subject"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@android:style/TextAppearance.Holo.Small"
                            android:text="@string/placeholder_date"
                            android:layout_weight="1" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:textAppearance="@android:style/TextAppearance.Holo.Small"
                android:text="@string/placeholder_description" />
        </LinearLayout>


    </android.support.v7.widget.CardView>
</FrameLayout>