<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:paddingTop="4dp"
             android:paddingBottom="4dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:text="@string/placeholder_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Holo.Small"
                    android:text="@string/placeholder_count"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/published_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Holo.Small"
                    android:text="@string/placeholder_date"
                    android:layout_weight="1"/>

            </LinearLayout>

            <ListView
                android:id="@+id/gists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="0dp"
                android:divider="@null"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>