<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        >

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    >

                <ImageView
                        android:id="@+id/author"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="author"
                        tools:src="@mipmap/ic_launcher"
                        />

                <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:textAppearance="@android:style/TextAppearance.Holo.Small"
                        tools:text="blah blah blah"
                        />

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dddddd"
                    />


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    >

                <TextView
                        android:id="@+id/bookmark_count"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginRight="4dp"
                        android:clickable="true"
                        android:gravity="center"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        android:textColor="@color/bookmark_count"
                        tools:text="@string/placeholder_count"
                        />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                    <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                            tools:text="@string/placeholder_title"
                            />

                    <TextView
                            android:id="@+id/original_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:lines="1"
                            android:paddingBottom="4dp"
                            android:textAppearance="@android:style/TextAppearance.Holo.Small"
                            tools:text="@string/placeholder_url"
                            />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                        <TextView
                                android:id="@+id/subject"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAppearance="@android:style/TextAppearance.Holo.Small"
                                tools:text="@string/placeholder_subject"
                                />

                        <TextView
                                android:id="@+id/date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:textAppearance="@android:style/TextAppearance.Holo.Small"
                                tools:text="@string/placeholder_date"
                                />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>